# curl_usage

./: CMakeLists.txt  README.md
libcurl/gcc_x64/: libcrypto.so.1.1  libcurl.so.4.8.0  libssl.so.1.1
libcurl/vc_x86/: libcurl.lib
src/: main.cpp
